stderr
Printer.java:9: error: cannot find symbol
        this.function = FizzBuzz.fizzbuzz;
            ^
  symbol: variable function
Printer.java:9: error: cannot find symbol
        this.function = FizzBuzz.fizzbuzz;
                                ^
  symbol:   variable fizzbuzz
  location: class FizzBuzz
2 errors
